@@ -37,6 +37,9 @@ initrd=initrd.gz
 # Maximal memory for linux guest
 #mem=64
 
+# Select console size, default is 80x25
+#cocon=120x40
+
 # Slirp for internet connection (outgoing)
 # Inside running coLinux configure eth0 with this static settings:
 # ipaddress 10.0.2.15   broadcast  10.0.2.255   netmask 255.255.255.0
